# cryptoeconomics

./: .gitignore  42_REWARDS.md  ADDRESSES.md  README.md  REWARD_COEFF  SAMPLE_DATA.md  TODO.md  all-maturity-dates-as-array.json  all-maturity-dates.json  apy_and_acc_reward.ipynb  data_processing.ipynb  demo_getUserAccReward.ipynb  geyser-apy.ipynb  global-state.md  liquidity_mining.ipynb  live_data.py  package.json  swagger.yaml  todos  utils.py
.github/workflows/: release.yml
api/: server.js
frontend/: package.json
frontend/src/: App.css  Chart.js
js/: --inspect  .env.example  .eslintignore  .eslintrc  .gitignore  .prettierignore  DATABASE_URL.enc  Dockerfile  comparenewandold.js  diffs.json  lock-node-version.js  package.json  tsconfig.json  tsconfig.sample.json  userExitStates.new.json  userExitStates.old.json
js/.ebextensions/: nodecommand.config
js/.husky/: pre-commit
js/api/: server.js
js/lib/: dataParsed.js  process.js
js/public/: index.html
js/scripts/: Run-Kit-8-6-2021.sh  Run-Kit-Template copy.sh  Run-Kit-Template.sh  aggregate-apy-stats.js  create-test-snapshot.js  divide-dispensations.js  divide-dispensations.test.js  download-initial-pool-states.js  election.js  get-all-maturity-dates.js  get-all-user-data-at-v1-end.js  get-all-v1-closure-data.js  mock-claims-and-distributions.js
js/server/: Untitled-1.js  config.js  (+21 more)
liquidity-mining-rewards-apr-2020/: README.md  package.json
rust/: Cargo.toml
rust/src/: config.rs  main.rs
rust/src/validator_staking/: mod.rs  process_data.rs  process_state.rs  remap_vs_addresses.rs  types.rs
(+126 files in other folders)
