[package]
name = "cryptoecon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.4.7"
chrono = "0.4.19"
libmath = "0.1.4"
rayon = "1.5.0"